--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
       </div>
       <ul class="list-unstyled menu-elements">
         <li class="active">
-          <a class="" href="#"> Home</a>
+          <a class="" href="index.html"> Home</a>
         </li>
         <li>
           <a class="" href="#"> About</a>
         </li>
         <li>
-          <a class="" href="#"> Join us</a>
+          <a class="" href="hiring.html"> Join us</a>
         </li>
         <li>
-          <a class="" href="#"> Contact us</a>
+          <a class="" href="say.html"> Contact us</a>
         </li>
       </ul>
       <div class="contacts">
@@ -112,19 +112,19 @@
     <div class="content"></div>
   </div>
 
-    <div class="container top">
-      <div class="row">
-        <div class="col-md-6 botx_header">We are <span class="span"><b>BOTX</b></span></div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 botx_text">
-          <p>Technology is advancing faster and taking less time to be widely
-            adopted than ever before. Things evolve, we humans accept it and move on. It’s time to run with the
-            changing world.</p>
-          It’s time <span class="span typing"></span>
-        </div>
+  <div class="container top">
+    <div class="row">
+      <div class="col-md-6 botx_header">We are <span class="span"><b>BOTX</b></span></div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 botx_text">
+        <p>Technology is advancing faster and taking less time to be widely
+          adopted than ever before. Things evolve, we humans accept it and move on. It’s time to run with the
+          changing world.</p>
+        It’s time <span class="span typing"></span>
       </div>
     </div>
+  </div>
 
 </body>
 
