--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="row row-responsive align-items-start">
       <div class="col col-md-4 col-sm-4 col-xs-4">
-        <img src="assets/images/logo.png" alt="Botx_Logo" class="img-responsive" width="150px" height="150px" />
+        <a href="index.html"><img src="assets/images/logo.png" alt="Botx_Logo" class="img-responsive" width="150px" height="150px" /></a>
       </div>
       <div class="col col-md-8 col-sm-8 col-xs-8 vector">
         <label for="check">
@@ -73,6 +73,10 @@
           <a class="" href="tel:+919048058428"><img class="" src="assets/images/phone24.png"> &nbsp +91 90480 58428</a>
           <br>
           <a class="" href="#"><img class="" src="assets/images/mailbox.png"> &nbsp Ernakulam, Kerala</a>
+        </div>
+
+        <div class="certificateverify">
+          <a class="" href="verification.html">Verify Certificate</a>
         </div>
 
         <div class="newsletter">
