--- a/verification.html
+++ b/verification.html
@@ -19,39 +19,70 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body id="vanta-canvas">
     <div class="container-fluid">
 
-          <div class="modal fade" id="verificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="verificationModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-              <div class="modal-body">
-                <div align="center" id="innerborder" style="padding: 2em">
-                    <h3 id="output_message">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div align="center" id="innerborder" style="padding: 2em">
+                            <h3 id="output_message">
 
-                    </h3>
-                    <button style="display: none;" id="downloadbtn" class="btn btn-warning" type="button">Download</button>
+                            </h3>
+                            <button style="display: none;" id="downloadbtn" class="btn btn-warning"
+                                type="button">Download</button>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              </div>
             </div>
-          </div>
+        </div>
 
+        <!-- Newsletter-->
 
+        <div id="newsletterModal" class="modal fade">
+            <div class="modal-dialog modal-newsletter">
+                <div class="modal-content">
+                    <form id="newsletter" action="">
+                        <div class="modal-header">
+                            <div class="icon-box">
+                                <i class="fa fa-envelope-open-o"></i>
+                            </div>
+                            <button type="button" class="close" data-dismiss="modal"
+                                aria-hidden="true"><span>&times;</span></button>
+                        </div>
+                        <div class="modal-body text-center">
+                            <h4>Subscribe to our newsletter</h4>
+                            <p>Join our subscribers list to get the latest news, updates and special offers delivered
+                                directly in your inbox.</p>
+                            <div class="input-group">
+                                <input type="email" name="_replyto" class="form-control" placeholder="Enter your email"
+                                    required>
+                                <span class="input-group-btn">
+                                    <input type="submit" class="btn btn-primary" value="Subscribe">
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
         <!-- ...................................... top-navbar ......................................... -->
 
         <div class="row row-responsive align-items-start">
             <div class="col col-md-4 col-sm-4 col-xs-4">
-                <a href="index.html"><img src="assets/images/logo.png" alt="Botx_Logo" class="img-responsive" width="150px" height="150px" /></a>
+                <a href="index.html"><img src="assets/images/logo.png" alt="Botx_Logo" class="img-responsive"
+                        width="150px" height="150px" /></a>
             </div>
             <div class="col col-md-8 col-sm-8 col-xs-8 vector">
                 <label for="check">
@@ -103,7 +134,7 @@
                 </div>
 
                 <div class="newsletter">
-                    <a class="" href="#">Subscribe to Newsletter</a>
+                    <a href="#" data-toggle="modal" data-target="#newsletterModal">Subscribe to Newsletter</a>
                 </div>
 
                 <div class="socialMedia">
@@ -141,12 +172,13 @@
                 <div class="row form">
                     <div class="col col-md-3 cert_form">
                         <div class="form-group">
-                            <input id="inputcertnum" type="text" placeholder="ENTER CERTIFICATE NUMBER IN CAPITAL" name="certnum"
-                                class="form-control name" maxlength="12">
+                            <input id="inputcertnum" type="text" placeholder="ENTER CERTIFICATE NUMBER IN CAPITAL"
+                                name="certnum" class="form-control name" maxlength="12">
                         </div>
                     </div>
                 </div>
-                <button id="verifybutton" type="button" class="btn btn-verify" data-toggle="modal" data-target="#verificationModal">Verify</button>
+                <button id="verifybutton" type="button" class="btn btn-verify" data-toggle="modal"
+                    data-target="#verificationModal">Verify</button>
             </form>
         </div>
     </div>
@@ -177,4 +209,5 @@
     </script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
