Newsletter Fixes and Verification Script changes

--- a/verification.html
+++ b/verification.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -173,7 +174,7 @@
                     <div class="col col-md-3 cert_form">
                         <div class="form-group">
                             <input id="inputcertnum" type="text" placeholder="ENTER CERTIFICATE NUMBER IN CAPITAL"
-                                name="certnum" class="form-control name" maxlength="12">
+                                name="certnum" class="form-control name" maxlength="13">
                         </div>
                     </div>
                 </div>
