final website update

--- a/about.html
+++ b/about.html
@@ -137,24 +137,31 @@
     </div>
     <!-- .......................................................................... -->
 
-    <!-- Content -->
-    <div class="row align-items-center justify-content-around">
-      <div class="col col-md-8 col-sm-9 content_main">
-        <h2 class="h2 display-1 botx_header">We are <span class="bot"><b>BOTX</b></span></h2>
-        <div class="w-100 d-none d-md-block"></div>
-        <div class="col col-md-8 adjust">
-          <div class="h3 botx_text">
-            <p class="h3">Technology is advancing faster and taking less time to be widely
-              adopted than ever before. Things evolve, we humans accept it and move on. It’s time to run with the
-              changing world.<br />
-              <b>It’s time <span class="bot typing"></span></b>
-            </p>
+    <!-- about us -->
+    <div class="container-fluid topup">
+      <div class="row">
+        <div class="col-lg-5 col-md-6 col-sm-7 about_header">
+          <b>About <span class="span_colorA">Us</span></b>
+          <p class="about_text">On a Mission to make <span class="span_colorA">human life</span> easier.!</p>
+        </div>
+      </div>
+      <div id="cntSlider">
+        <div id="cntSlider2">
+          <div class="box">
+            <h3>We Strive For Ethics And Quality</h3>
+            <p>On a mission to make advansed and more butifulla and create unexprensice fact for good reason</p>
+          </div>
+          <div class="box">
+            <h3>We are constantly improving</h3>
+            <p>On a mission to make advansed and more butifulla and create unexprensice fact for good reason</p>
+          </div>
+          <div class="box">
+            <h3>We are problem solving Experts</h3>
+            <p>On a mission to make advansed and more butifulla and create unexprensice fact for good reason</p>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- ......................................................................................... -->
 
   </div>
 
@@ -176,7 +183,7 @@
       minWidth: 100.00,
       scale: 1.00,
       scaleMobile: 1.00,
-      color: 0x008ECB,
+      color: 0xFFFFFF,
       backgroundColor: 0x000000,
       size: 1.2,
     })
