--- a/hiring.html
+++ b/hiring.html
@@ -92,7 +92,7 @@
                         <a class="" href="index.html"> Home</a>
                     </li>
                     <li>
-                        <a class="" href="#"> About</a>
+                        <a class="" href="about.html"> About</a>
                     </li>
                     <li>
                         <a class="" href="hiring.html"> Join us</a>
